--- a/score_entry_ui/index.html
+++ b/score_entry_ui/index.html
@@ -535,6 +535,240 @@
         .athlete-row .form-group:last-child {
             flex: 0 0 150px;
         }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            .container {
+                padding: 16px;
+            }
+            
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            .form-row {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .athlete-row {
+                flex-direction: column;
+            }
+
+            .athlete-row .form-group:last-child {
+                flex: 1;
+            }
+
+            .keypad-layout {
+                grid-template-columns: 1fr;
+            }
+
+            .major-keys {
+                grid-template-columns: repeat(6, 1fr);
+            }
+
+            .major-key {
+                padding: 16px;
+                font-size: 1.5rem;
+            }
+
+            .minor-keys {
+                grid-template-columns: repeat(5, 1fr) 8px repeat(5, 1fr);
+            }
+
+            .minor-key {
+                padding: 12px 4px;
+                font-size: 0.9rem;
+            }
+
+            .place-keys {
+                grid-template-columns: repeat(5, 1fr);
+            }
+
+            .place-key {
+                padding: 14px;
+                font-size: 1.2rem;
+            }
+        }
+
+        /* Landscape phone optimization */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .container {
+                padding: 12px 16px;
+            }
+
+            header {
+                margin-bottom: 16px;
+            }
+
+            header h1 {
+                font-size: 1.5rem;
+                margin-bottom: 4px;
+            }
+
+            header p {
+                font-size: 0.9rem;
+            }
+
+            .card {
+                padding: 16px;
+                margin-bottom: 16px;
+            }
+
+            .card-title {
+                font-size: 1.1rem;
+                margin-bottom: 12px;
+            }
+
+            .form-row {
+                grid-template-columns: repeat(4, 1fr);
+                gap: 12px;
+                margin-bottom: 12px;
+            }
+
+            .form-group {
+                gap: 4px;
+            }
+
+            label {
+                font-size: 0.75rem;
+            }
+
+            input, select {
+                padding: 8px 12px;
+                font-size: 0.9rem;
+            }
+
+            .events-grid {
+                grid-template-columns: repeat(5, 1fr);
+                gap: 8px;
+            }
+
+            .event-card {
+                padding: 10px;
+                border-radius: 8px;
+            }
+
+            .event-card h3 {
+                font-size: 0.75rem;
+                margin-bottom: 8px;
+            }
+
+            input.score-input {
+                font-size: 1.1rem;
+                padding: 6px;
+            }
+
+            input.place-input {
+                font-size: 1rem;
+                width: 60px;
+                padding: 6px;
+            }
+
+            .clear-field-btn {
+                padding: 4px 8px;
+                font-size: 0.65rem;
+                margin-top: 4px;
+            }
+
+            .entry-layout {
+                gap: 16px;
+            }
+
+            .keypad-layout {
+                gap: 16px;
+            }
+
+            .major-keys {
+                gap: 6px;
+            }
+
+            .major-key {
+                padding: 14px 16px;
+                font-size: 1.4rem;
+            }
+
+            .minor-keys {
+                gap: 4px;
+            }
+
+            .minor-key {
+                padding: 10px 4px;
+                font-size: 0.85rem;
+            }
+
+            .place-keys {
+                gap: 6px;
+            }
+
+            .place-key {
+                padding: 12px;
+                font-size: 1.2rem;
+            }
+
+            .focus-indicator {
+                padding: 8px 12px;
+            }
+
+            .focus-indicator .label {
+                font-size: 0.75rem;
+            }
+
+            .focus-indicator .value {
+                font-size: 0.95rem;
+            }
+
+            .toggle-btn, .tab-btn {
+                padding: 8px 12px;
+                font-size: 0.8rem;
+            }
+
+            .btn {
+                padding: 8px 14px;
+                font-size: 0.85rem;
+            }
+        }
+
+        /* Small phones */
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            .card {
+                padding: 16px;
+                border-radius: 12px;
+            }
+
+            .card-title {
+                font-size: 1rem;
+            }
+
+            .form-row {
+                grid-template-columns: 1fr;
+            }
+
+            .events-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            .event-card h3 {
+                font-size: 0.8rem;
+            }
+
+            input.score-input {
+                font-size: 1.2rem;
+            }
+
+            .major-key {
+                padding: 18px 20px;
+                font-size: 1.6rem;
+            }
+
+            .minor-key {
+                padding: 14px 4px;
+                font-size: 0.95rem;
+            }
+        }
     </style>
 </head>
 <body>
