scores/bests visual improvements

--- a/score_entry_ui/attendance.html
+++ b/score_entry_ui/attendance.html
@@ -1461,7 +1461,7 @@
         <!-- Minimal nav -->
         <nav class="nav-bar">
             <a href="/" class="nav-link">Scores</a>
-            <a href="/personal-bests" class="nav-link">PBs</a>
+            <a href="/meet-scores" class="nav-link">Meet Scores</a>
             <a href="/meet-averages" class="nav-link">Averages</a>
         </nav>
 
