--- a/score_entry_ui/meet_averages.html
+++ b/score_entry_ui/meet_averages.html
@@ -542,7 +542,7 @@
             <p>Average All Around scores by Meet and Level</p>
             <div class="nav-links">
                 <a href="/" class="nav-link">← Score Entry</a>
-                <a href="/personal-bests" class="nav-link">Meet Scores</a>
+                <a href="/meet-scores" class="nav-link">Meet Scores</a>
             </div>
         </header>
 
