--- a/score_entry_ui/index.html
+++ b/score_entry_ui/index.html
@@ -777,7 +777,7 @@
             <h1>🤸 Gymfest Score Entry</h1>
             <p>Streamlined score input for gymnastics competitions</p>
             <div style="display: flex; justify-content: center; gap: 24px; margin-top: 12px;">
-                <a href="/personal-bests" style="color: var(--accent-secondary); text-decoration: none; font-size: 0.95rem;">Meet Scores →</a>
+                <a href="/meet-scores" style="color: var(--accent-secondary); text-decoration: none; font-size: 0.95rem;">Meet Scores →</a>
                 <a href="/meet-averages" style="color: var(--accent-secondary); text-decoration: none; font-size: 0.95rem;">Meet Averages →</a>
             </div>
         </header>
